--- a/index.html
+++ b/index.html
@@ -94,14 +94,6 @@
       color: green;
     }
 
-    footer {
-      margin-top: auto;
-      padding: 20px;
-      font-size: 14px;
-      color: #555;
-      text-align: center;
-    }
-
     .loading {
       font-size: 18px;
       color: #00695c;
@@ -152,10 +144,6 @@
     </div>
   </div>
 
-  <footer>
-    &copy; 2025 Fish Tank Monitoring | Built with 💧 by Sandaruwan
-  </footer>
-
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyA1tsA97Ckhfyn7VBjlVQ5kcbzpHoY6bWg",
@@ -177,13 +165,14 @@
     function updateSensorData(id, value) {
       const element = document.getElementById(id);
       const statusElement = document.getElementById('status-' + id);
-      
+
       if (value === null || value === undefined) {
         element.textContent = "--";
         statusElement.textContent = "Offline";
+        statusElement.classList.remove('online');
         statusElement.classList.add('offline');
       } else {
-        element.textContent = id === "tds" ? ${value} ppm : value;
+        element.textContent = id === "tds" ? `${value} ppm` : value;
         statusElement.textContent = "Online";
         statusElement.classList.remove('offline');
         statusElement.classList.add('online');
