--- a/index.html
+++ b/index.html
@@ -4,161 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Project Nemo</title>
-  <!-- Font Awesome for icons -->
-  <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    rel="stylesheet"
-  />
-
-  <style>
-    :root {
-      --bg-light: #f0f4f8;
-      --bg-dark:  #121212;
-      --card-light: #ffffff;
-      --card-dark:  #1e1e1e;
-      --text-light: #222;
-      --text-dark:  #e0f7fa;
-      --accent:    #00bcd4;
-    }
-
-    /* ----- Base ----- */
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: var(--bg-light);
-      color: var(--text-light);
-      transition: background-color 0.4s, color 0.4s;
-    }
-    body.dark-mode {
-      background-color: var(--bg-dark);
-      color: var(--text-dark);
-    }
-
-    /* ----- Header ----- */
-    .header {
-      position: relative;
-      text-align: center;
-      padding: 1.5rem 1rem 1rem;
-    }
-    .header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-
-    /* ----- Toggle Switch ----- */
-    .toggle-wrapper {
-      position: absolute;
-      top: 1.5rem;
-      right: 1.5rem;
-    }
-
-    .toggle-switch {
-      position: relative;
-      width: 60px;
-      height: 32px;
-      display: inline-block;
-    }
-    .toggle-switch input {
-      opacity: 0;
-      width: 0; height: 0;
-    }
-
-    /* track */
-    .slider {
-      position: absolute;
-      inset: 0;
-      background-color: #ccc;
-      border-radius: 34px;
-      transition: background-color 0.4s;
-    }
-    /* thumb */
-    .slider::before {
-      content: "";
-      position: absolute;
-      width: 24px; height: 24px;
-      left: 4px; top: 4px;
-      background-color: white;
-      border-radius: 50%;
-      transition: transform 0.4s;
-    }
-
-    /* icons always visible */
-    .moon-icon, .sun-icon {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 16px;
-      pointer-events: none;
-      transition: opacity 0.4s;
-    }
-    .moon-icon { left: 8px; opacity: 1; color: #000; }
-    .sun-icon  { right: 8px; opacity: 0; }
-
-    /* checked = dark mode */
-    input:checked + .slider {
-      background-color: var(--accent);
-    }
-    input:checked + .slider::before {
-      transform: translateX(28px);
-    }
-    input:checked ~ .moon-icon {
-      opacity: 0;
-    }
-    input:checked ~ .sun-icon {
-      opacity: 1;
-      color: #222; /* contrast on accent */
-    }
-
-    /* ----- Dashboard ----- */
-    .dashboard {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1.2rem;
-      max-width: 1100px;
-      margin: 2rem auto;
-      padding: 1.5rem;
-    }
-
-    .card {
-      background-color: var(--card-light);
-      padding: 1.5rem;
-      border-radius: 1.5rem;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.05);
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      height: 250px;
-      transition: background-color 0.3s;
-    }
-    body.dark-mode .card {
-      background-color: var(--card-dark);
-    }
-
-    .label {
-      font-size: 1rem;
-      font-weight: 600;
-      margin-bottom: 0.5rem;
-    }
-    .value {
-      font-size: 2rem;
-      font-weight: bold;
-    }
-    .status {
-      font-size: 0.9rem;
-      margin-top: auto;
-    }
-    .offline { color: red; }
-    .online  { color: green; }
-
-    /* ----- Mobile ----- */
-    @media (max-width: 600px) {
-      .header h1 { font-size: 1.5rem; }
-      .dashboard  { padding: 1rem; gap: 1rem; }
-      .card       { padding: 1rem; height: auto; }
-    }
-  </style>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
   <div class="header">
     <h1>🐠 Project Nemo</h1>
@@ -167,7 +15,7 @@
         <input type="checkbox" id="themeToggle">
         <span class="slider"></span>
         <i class="fas fa-moon moon-icon"></i>
-        <i class="fas fa-sun  sun-icon"></i>
+        <i class="fas fa-sun sun-icon"></i>
       </label>
     </div>
   </div>
@@ -198,65 +46,19 @@
       <div class="value" id="tds">-- ppm</div>
       <div class="status" id="status-tds">Loading...</div>
     </div>
+    <div class="card">
+      <div class="label">Fish Feeder</div>
+      <div class="value" id="feeder-status">--</div>
+      <!-- <div class="feeder-status" id="feeder-status">Loading...</div> -->
+      <div class="feeder-bar-container">
+        <div class="feeder-bar" id="feeder-bar"></div>
+      </div>
+      <div class="status" id="status-feeder">Loading...</div>
+    </div>
   </div>
 
-  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-database-compat.js"></script>
-  <script>
-    // Initialize Firebase
-    const firebaseConfig = {
-      apiKey:       "AIzaSyA1tsA97Ckhfyn7VBjlVQ5kcbzpHoY6bWg",
-      databaseURL:  "https://nadun-watertank-default-rtdb.asia-southeast1.firebasedatabase.app/"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-
-    // Sensor paths
-    const sensors = {
-      temp:  "/waterQuality/temperature",
-      ph:    "/waterQuality/pH",
-      turb:  "/waterQuality/turbidity",
-      clear: "/waterQuality/clearness",
-      tds:   "/waterQuality/tds"
-    };
-
-    // Update UI
-    function updateSensorData(id, value) {
-      const el = document.getElementById(id);
-      const st = document.getElementById("status-" + id);
-
-      if (value == null) {
-        el.textContent = "--";
-        st.textContent = "Offline";
-        st.classList.add("offline");
-        st.classList.remove("online");
-      } else {
-        // Round temp & pH to 2 decimals
-        if (id === "temp" || id === "ph") {
-          value = parseFloat(value).toFixed(2);
-        }
-        el.textContent = id === "tds"
-          ? `${value} ppm`
-          : id === "temp"
-            ? `${value} °C`
-            : value;
-        st.textContent = "Online";
-        st.classList.add("online");
-        st.classList.remove("offline");
-      }
-    }
-
-    // Listen for realtime updates
-    for (let [id, path] of Object.entries(sensors)) {
-      db.ref(path).on("value", snap => updateSensorData(id, snap.val()));
-    }
-
-    // Theme toggle
-    document.getElementById("themeToggle")
-      .addEventListener("change", e => {
-        document.body.classList.toggle("dark-mode", e.target.checked);
-      });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
